# fastapi-easy-crud

./: README.md  pyproject.toml  requirements.txt  setup.py
fastapi_easy_crud/crud/: async_crud_base.py  async_restful_api_base.py  crud_base.py  restful_api_base.py
fastapi_easy_crud/db/: async_db_deps.py  db_base.py  db_deps.py  session.py  settings.py
fastapi_easy_crud/fastapi/: middlewares.py  secure_openapi.py  utils.py
scripts/: format-imports.sh  format.sh  lint.sh  local-ci.sh
