[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-easy-crud"
version = "0.0.6"
authors = [
  { name="Yuhan Wei", email="weiyuhan@pku.edu.cn" },
]
description = "Easy to use crud api for fastapi and sqlacademy model"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'uvicorn>=0.21.1',
    'fastapi>=0.95.1',
    'loguru>=0.7.0',
    'sqlalchemy>=2.0.10',
    'sqlalchemy[asyncio]>=2.0.10',
    'aiomysql>=0.2.0',
    'pymysql>=1.0.3',
    'asyncpg>=0.29.0'
]

[project.optional-dependencies]
tests = [
  'pytest>=7.3.1',
  'black>=23.3.0',
  'mypy>=1.2.0',
  'isort>=5.12.0',
  'autoflake>=2.1.1',
  'flake8>=6.0.0',
  'pytest-cov>=4.0.0',
]

[project.urls]
Homepage = "https://github.com/weiyuhan/fastapi-easy-crud"
Issues = "https://github.com/weiyuhan/fastapi-easy-crud/issues"
